# backend/src/resources/monitoring/mod.rs
@@ -1,0 +1,5 @@
+mod model;
+mod repo;
+pub mod rest;
+
+pub use model::HttpAuditLog;
